--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
     flex-wrap: wrap;
     justify-content: space-between;
 }
-@media (max-width: 768px){
+@media (max-width: 1440px){
     .section {
         width: 100%;
     } 
@@ -138,4 +138,9 @@ span {
     background-image: url(https://rs.school/images/rs_school_js.svg);
     background-size: contain;
     background-repeat: no-repeat;
+}
+@media (max-width: 1440px) {
+.container {
+    padding: 0 20px;
+    }
 }
